[tool.poetry]
name = "fc24_combination"
version = "1.0.0"
description = ""
authors = ["Rongzhi Mai <makwin9chi@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
numpy = "1.24.2"
pandas = "2.0.0"
jupyterlab = "3.6.1"
matplotlib = "3.7.1"
pip = "23.0.1"
ipykernel = "6.22.0"
ipympl = "0.9.3"
ipywidgets = "8.0.6"
black = "23.3.0"
isort = "5.12.0"
xlrd = "2.0.1"
openpyxl = "3.1.2"
tqdm = "4.65.0"
jupyterlab-latex = "3.1.0"
jupyterlab-pygments = "0.2.2"
jupyterlab-code-formatter = "1.5.3"
jupyterlab-execute-time = "2.3.1"
jupyterlab-system-monitor = "0.8.0"
jupyterlab-git = "0.41.0"
nodejs = "0.1.1"
jupyter-contrib-nbextensions = "^0.7.0"
traitlets = "5.9.0"
ortools = "^9.8.3296"
torch = "2.0.1"
gymnasium = "^0.29.1"
gym = "^0.26.2"


[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
